Disables authentication and uses dummy authentication.

--- a/Dockerfile.jupyterhub
+++ b/Dockerfile.jupyterhub
@@ -7,7 +7,8 @@ RUN /opt/conda/bin/conda install psycopg2=2.7 && \
     /opt/conda/bin/conda clean -tipsy && \
     /opt/conda/bin/pip install \
     oauthenticator==0.6.* \
-    dockerspawner==0.8.*
+    dockerspawner==0.8.* \
+    jupyterhub-dummyauthenticator
 
 # Copy TLS certificate and key
 ENV SSL_CERT /srv/jupyterhub/secrets/jupyterhub.crt
