--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ DOCKER_MACHINE_NAME=jupyterhub
 DOCKER_NETWORK_NAME=jupyterhub-network
 
 # Single-user Jupyter Notebook server container image
-DOCKER_NOTEBOOK_IMAGE=jupyter/datascience-notebook:ae885c0a6226
+DOCKER_NOTEBOOK_IMAGE=./datascience-notebook
 
 # Notebook directory in the container.
 # This will be /home/jovyan/work if the default
